--- a/sass/pages/_story.sass
+++ b/sass/pages/_story.sass
@@ -87,7 +87,6 @@ main.story
 
 
 			figure
-				+span-columns(12.5)
 				text-align: right
 
 			img
@@ -163,7 +162,7 @@ main.story
 					padding-left: 0
 
 			p:nth-child(1)
-				margin-top: 10%
+				margin-top: 7.5%
 
 				+media(min-width 320px max-width 881px, 1)
 					+span-columns(1)
